tests/negative/neg_rule4_maybe_null.safe
-- Test: neg_rule4_maybe_null
-- Description: Dereference after a conditional that does not cover all paths.
--   On one branch the pointer is assigned, on the other it remains null.
--   The dereference after the conditional is not provably safe.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Expected: REJECT null_dereference

package maybe_null_test

   subtype value is integer (0 to 100);
   type value_ptr is access value;

   --  Conditional_Deref: only assigns P on one branch.
   --  After the if, P may still be null.
   function conditional_deref (flag : boolean) returns value
      p : value_ptr = null;

      if flag
         p = new (50 as value);

      --  If Flag was False, P is still null.
      return p.all;  -- ERROR: P may be null when Flag = False

